--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'npm'
+          cache-dependency-path: 'backend/package-lock.json'
       
       - name: Install backend dependencies
         working-directory: ./backend
