--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,9 @@ jobs:
           FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
           FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          MONTHLY_BUDGET: ${{ secrets.MONTHLY_BUDGET }}
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload Pages artifact
+          MONTHLY_BUDGET: ${{ secrets.MONTHLY_BUDGE
+          
+      - name: Upload to GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
           path: './frontend/dist'
