--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,20 @@
     "version": "1.0.0",
     "description": "Frontend for Banking Dashboard",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "deploy": "gh-pages -d dist"
+      "dev": "vite",
+      "build": "vite build",
+      "preview": "vite preview --port 4173",
+      "deploy": "gh-pages -d dist"
     },
     "dependencies": {
-        "bootstrap": "^5.3.0",
-        "bootstrap-icons": "^1.10.0",
-        "chart.js": "^4.4.0",
-        "firebase": "^11.6.0"
+      "bootstrap": "^5.3.0",
+      "bootstrap-icons": "^1.10.0",
+      "chart.js": "^4.4.0",
+      "firebase": "^11.6.0"
     },
     "devDependencies": {
-        "@types/chart.js": "^2.9.40",
-        "gh-pages": "^5.0.0",
-        "vite": "^4.4.0"
+      "@types/chart.js": "^2.9.40",
+      "gh-pages": "^5.0.0",
+      "vite": "^4.4.0"
     }
-}
+  }
