Now uses a 4-digit pin

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy to GitHub Pages
+name: Frontend refresh and deploy
 
 on:
-  push:
-    branches: ["main"]
+  schedule:
+    - cron: '0 21 * * *'  # 21:30 UTC (23:30 SAST)
   workflow_dispatch:
 
 permissions:
