Skips internal transfers if credit as well

--- a/backend/example.env
+++ b/backend/example.env
@@ -11,3 +11,4 @@ FIREBASE_SERVICE_ACCOUNT=
 DATABASE_URL=
 EXCLUSION_CATEGORIES=["RENT", "CAR"]
 SALARY_DESCRIPTION=
+SAVINGS_ACCOUNT_TRANSACTION_DESCRIPTION=
