--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -1,7 +1,14 @@
 name: Backend fetch and process
 on:
   schedule:
-    - cron: '0 21 * * *'  # 21:00 UTC (23:00 SAST)
+    - cron: '45 3 * * *'   # 05:45 SAST
+    - cron: '45 6 * * *'   # 08:45 SAST
+    - cron: '45 9 * * *'   # 11:45 SAST
+    - cron: '45 12 * * *'  # 14:45 SAST
+    - cron: '45 15 * * *'  # 17:45 SAST
+    - cron: '45 18 * * *'  # 20:45 SAST
+    - cron: '15 21 * * *'  # 23:15 SAST
+
   workflow_dispatch:
   push:
     branches: [main]
