--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -1,13 +1,13 @@
 name: Backend fetch and process
 on:
   schedule:
-    - cron: '45 3 * * *'   # 05:45 SAST
-    - cron: '45 6 * * *'   # 08:45 SAST
-    - cron: '45 9 * * *'   # 11:45 SAST
-    - cron: '45 12 * * *'  # 14:45 SAST
-    - cron: '45 15 * * *'  # 17:45 SAST
-    - cron: '45 18 * * *'  # 20:45 SAST
-    - cron: '15 21 * * *'  # 23:15 SAST
+    - cron: '0 4 * * *'   # 06:00 SAST (UTC+2)
+    - cron: '0 7 * * *'   # 09:00 SAST
+    - cron: '0 10 * * *'  # 12:00 SAST
+    - cron: '0 13 * * *'  # 15:00 SAST
+    - cron: '0 16 * * *'  # 18:00 SAST
+    - cron: '0 19 * * *'  # 21:00 SAST
+    - cron: '30 21 * * *' # 23:30 SAST
 
   workflow_dispatch:
   push:
@@ -32,10 +32,6 @@ jobs:
       - name: Install backend dependencies
         working-directory: ./backend
         run: npm ci
-      
-      - name: Build backend
-        working-directory: ./backend
-        run: npm run build
       
       - name: Run backend
         working-directory: ./backend
