Added inter account transfer description secret

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -48,4 +48,5 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           EXCLUSION_CATEGORIES: ${{ secrets.EXCLUSION_CATEGORIES }}
           SALARY_DESCRIPTION: ${{ secrets.SALARY_DESCRIPTION }}
+          SAVINGS_ACCOUNT_TRANSACTION_DESCRIPTION: ${{ secrets.SAVINGS_ACCOUNT_TRANSACTION_DESCRIPTION }}
         run: npm start
