Added new env to scheduler

--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -49,4 +49,5 @@ jobs:
           EXCLUSION_CATEGORIES: ${{ secrets.EXCLUSION_CATEGORIES }}
           SALARY_DESCRIPTION: ${{ secrets.SALARY_DESCRIPTION }}
           SAVINGS_ACCOUNT_TRANSACTION_DESCRIPTION: ${{ secrets.SAVINGS_ACCOUNT_TRANSACTION_DESCRIPTION }}
+          MONTHLY_BUDGET: ${{ secrets.MONTHLY_BUDGET }}
         run: npm start
